fix: ensure artifact disk cleaner doesn't die due to a failed clean-up run